--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.ssh/
+
 # Created by https://www.toptal.com/developers/gitignore/api/jetbrains+all,dotnetcore,csharp
 # Edit at https://www.toptal.com/developers/gitignore?templates=jetbrains+all,dotnetcore,csharp
 
