--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,7 +1,7 @@
 name: Deploy app
 on:
   workflow_run:
-    workflows: ["build_and_inspect"]
+    workflows: ["Build and Inspect Code"]
     types: ["completed"]
 
 jobs:
