run deploy action on pr

--- a/.github/workflows/code-inspection.yml
+++ b/.github/workflows/code-inspection.yml
@@ -3,6 +3,7 @@ on: [pull_request]
 jobs:
   build_and_inspect:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success'}}
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
