--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,8 +14,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
-          source: ".deploy"
-          target: "~/.deploy"
+          source: ".deploy/"
+          target: "~/.deploy/"
       - uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.HOST }}
