--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
           key: ${{ secrets.KEY }}
           port: ${{ secrets.PORT }}
           source: ".deploy/"
-          target: "~/.deploy/"
+          target: "~/"
       - uses: appleboy/ssh-action@v0.1.10
         with:
           host: ${{ secrets.HOST }}
